[c] Fix basic css for text overflow on tablet

--- a/src/components/common/InformationBlock/InformationBlock.scss
+++ b/src/components/common/InformationBlock/InformationBlock.scss
@@ -33,8 +33,12 @@
     }
 
     &--code {
-      margin-right: 20px;
       background: var(--theme-highlight);
+      margin-right: 20px;
+
+      @media screen and (max-width: 1200px) {
+        margin-right: 0px;
+      }
     }
 
     @include tablet {
@@ -56,6 +60,16 @@
 
       &:hover {
         opacity: 1;
+      }
+    }
+
+    span {
+      max-width: 100%;
+    }
+
+    @media screen and (max-width: 1200px) {
+      &--name {
+        display: block !important;
       }
     }
   }
